sugar/tests/success/alias_trigger5.mx
bin : ! 1, end : _|_ , tin : ! 1 |-

let a = demand bin in
let tin' = alias tin in
let b = demand tin' in
let c = demand tin in
let () = a in
let () = b in
let () = c in
end
