sugar/tests/fail/unit.mx
a : _|_ |- let () = a in b
